--- a/.github/workflows/v1_build.yml
+++ b/.github/workflows/v1_build.yml
@@ -1,12 +1,12 @@
 name: portfolio v1 build
 
-
 on:
   push:
     branches:
       - master
 permissions:
   contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,15 +16,46 @@ jobs:
           uses: actions/setup-node@v3
           with:
             node-version: '16.x'
-
         - name: Install dependencies
           run: npm ci
-        
         - name: Build
           run: npm run build
+        - name: Export Static Site
+          run: npm run export
         - name: Deploy to Github Pages
           uses: peaceiris/actions-gh-pages@v3
           with:
             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-            publish_dir: ./dist
-            cname: clark.saben.org/portfolio
+            publish_dir: ./out
+            cname: clark.saben.org
+
+# name: portfolio v1 build
+
+
+# on:
+#   push:
+#     branches:
+#       - master
+# permissions:
+#   contents: write
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#         - uses: actions/checkout@v2
+#         - name: Install Node.js and npm
+#           uses: actions/setup-node@v3
+#           with:
+#             node-version: '16.x'
+
+#         - name: Install dependencies
+#           run: npm ci
+        
+#         - name: Build
+#           run: npm run build
+#         - name: Deploy to Github Pages
+#           uses: peaceiris/actions-gh-pages@v3
+#           with:
+#             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+#             publish_dir: ./dist
+#             cname: clark.saben.org/portfolio
