--- a/.github/workflows/v1_build.yml
+++ b/.github/workflows/v1_build.yml
@@ -20,8 +20,8 @@ jobs:
           run: npm ci
         - name: Build
           run: npm run build
-        - name: Export Static Site
-          run: npm run export
+        # - name: Export Static Site
+        #   run: npm run export
         - name: Deploy to Github Pages
           uses: peaceiris/actions-gh-pages@v3
           with:
