add gh workflow so site builds

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"lint": "next lint",
 		"type-check": "tsc",
 		"format": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx,vue}\"",
-    		"export": "next start"
+    		"export": "next export"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.4.1",
